# sphough

./: CMakeLists.txt  README.md  base_hough2d.cpp  base_hough2d.hpp  hough2d_test.cpp  naive_hough2d.cpp  naive_hough2d.hpp  sparse_hough2d.cpp  sparse_hough2d.hpp  sphough.kdev4
